ajustes de estrutura e responsividade e implementação de testes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* ESSENCIAL para Jest + RTL */
+    "types": ["jest", "@testing-library/jest-dom"],
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
+
